--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,5 +2,6 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 
 body {
-  background-color: blue;
+  background-color: rgb(153, 153, 153);
 }
+
