--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,3 +4,16 @@
 body {
   background-color: blue;
 }
+.card {
+  border-radius: 40px;
+  padding-bottom: 20px;
+
+}
+
+.card img {
+  border-radius: 50%;
+  width: 100px;
+  border-color: red ;
+}
+
+
