added code for darkTheme

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,18 +2,6 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 
 body {
-  background-color: blue;
+  background-color: rgb(153, 153, 153);
 }
-.card {
-  border-radius: 40px;
-  padding-bottom: 20px;
-
-}
-
-.card img {
-  border-radius: 50%;
-  width: 100px;
-  border-color: red ;
-}
-
 
