--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 
+
+
 body {
   background-color: rgb(153, 153, 153);
+  color: black;
 }
+
+
+.dark-mode {
+  background-color: black;
+  color: white;
+}
+
 
