added large text features

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,3 +5,11 @@ body {
   background-color: rgb(153, 153, 153);
 }
 
+body.regular {
+  font-size: 14px;
+}
+
+body.enlarged {
+  font-size: 60px;
+}
+
