added dark mode

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,15 +3,18 @@
 
 
 
-body {
+body  {
   background-color: rgb(153, 153, 153);
   color: black;
+  
 }
 
 
-.dark-mode {
+
+.dark-mode .card {
   background-color: black;
-  color: white;
+  color: orange;
+      
 }
 
 
