--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,4 +17,19 @@ body  {
       
 }
 
+.card img {
+  border-radius: 50%;
+  width: 30%;
+  margin: 5%;
+  border: solid 2px red;
+}
 
+.card {
+  margin: 2%;
+  padding: 2%;
+  border-radius: 10px;
+}
+
+.btn .btn-danger {
+  margin-bottom: 3%;
+}
