--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,7 @@ body {
 .dark-mode .card {
   background-color: black;
   color: white;
+  border: solid 4px white;
 
 }
 
@@ -28,8 +29,14 @@ body {
   margin: 1%;
   padding: 2%;
   border-radius: 10px;
+  border: solid 2px black;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
 }
 
+.card:hover {
+  box-shadow: 0 8px 30px 0 rgba(0,0,0,0.2);
+}
 
 body.regular {
   font-size: 14px;
