closer to paradise + darkmode polish + organization

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,8 +12,7 @@ body {
 
 
 .dark-mode .card {
-  background-color: black;
-  color: white;
+  color: white !important;
   border: solid 4px white;
 
 }
